<resources>
    <string name="app_name">رحلة الكلمات</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcom_titel">أهلًا وسهلًا بك في تطبيق رحلة الكلمات</string>
    <string name="welcome_text">أهلًا بك في رحلتك الممتعة لاستكشاف جمال اللغة العربية! انطلق الآن واكتشف كلمات جديدة من مختلف المدن العربية. سجل الدخول أو أنشئ حسابًا جديدًا لتبدأ مغامرتك اللغوية.</string>
    <string name="login">تسجيل الدخول</string>
    <string name="signup">انشاء حساب جديد</string>
    <string name="LogIn">تسجيل الدخول</string>
    <string name="password_hint">كلمة السر</string>
    <string name="email_hint">البريد الالكتروني</string>
    <string name="noAccount">ليس لدي حساب</string>
    <string name="logInUsing">او سجل دخولك بواسطة</string>
    <string name="level">مستوى التقدم</string>
    <string name="friends">الأصدقاء</string>
    <string name="editeProfile">تعديل الاسم والصوره</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="default_web_client_id">695111487083-sugli3r7urhb073ngd1469thk04b8ls3.apps.googleusercontent.com</string>
    <string name="haveAccount">أمتلك حساب بالفعل</string>
    <string name="username">اسم المستخدم</string>
    <string name="weekly">اسبوعيا</string>
    <string name="Daily">يوميا</string>
    <string name="monthly">شهريا</string>
    <string name="settings">الإعدادات</string>
    <string name="notification">الإشعارات</string>
    <string name="night_mode">الوضع الداكن</string>
    <string name="help_center">مركز المساعدة</string>
    <string name="contact_us">تواصل معانا</string>
    <string name="choose_image">اختار صورة من الهاتف</string>
    <string name="new_name">ادخل اسم جديد</string>
    <string name="change_name">تغيير الأسم</string>
    <string name="change_image_done">تم تغيير الصورة</string>
    <string name="change_image_failed">فشل تغيير الصورة</string>
    <string name="change_name_done">تم تغيير الأسم</string>
    <string name="change_name_failed">فشل تغيير الأسم</string>
    <string name="my_personal_card">الكروت الخاصة بك </string>
    <string name="make_sentance">رتب الكلمات الأتية لتكوين جملة مفيدة</string>
    <string name="ma3na">"المعني : "</string>
    <string name="klma">" الكلمة : "</string>
    <string name="worng_answer">"خطأ في الكلمة "</string>
    <string name="right_answer">"الكلمة صحيحة "</string>
    <string name="after_failing_in_game">لقد خسرت هذه المرة.\nيمكنك مراجعة الكلمات والعودة مرة أخرى عند انتهاء الوقت المحدد.</string>
    <string name="congrates">مبارك نجاحك يا  </string>
    <string name="next">التالي</string>
    <string name="meaning_placeholder">معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها معناها</string>
    <string name="start_now">لنبدأ الأن</string>
    <string name="gomla">اختر المعني المرادف لهذه الفقرة</string>
    <string name="fkra">"الفقرة : "</string>
    <string name="check">"تحقق"</string>
    <string name="good_jop">أحسنت عملاً</string>
    <string name="follow_up">المتابعة</string>
    <string name="wrong_answer">إجابة غير صحيحة</string>
    <string name="rearrange_words_title">رتب الكلمات الآتية لتكوين جملة مفيدة</string>
    <string name="example">مثال : </string>
    <string name="sorry">للأسف لقد نفذت وحدات الصحة الخاصة بك</string>
    <string name="skip">تخطي</string>
    <string name="learn_today">تعلم كلمة اليوم</string>
    <string name="leader_board">المتصدرين</string>
    <string name="your_score">النقاط الخاصة بك</string>
    <string name="time_to_learn">حان وقت التعلم</string>
    <string name="welcome_text_onboarding">مرحبًا بك في تطبيق "رحلة الكلمات"! 🌟 هنا تبدأ رحلتك لاستكشاف جمال اللغة العربية والتعرف على الثقافة العربية العريقة. انطلق في تجربة تعليمية ممتعة تجمع بين التعلم والترفيه.</string>
    <string name="cities_explore_text">سافر افتراضيًا إلى مدن عربية رائعة مثل القاهرة والإسكندرية! 🌍 كل مدينة تحمل معها مفردات جديدة ومعاني متنوعة لتتعلمها بطريقة تفاعلية وممتعة.</string>
    <string name="flashcards_text">تعلم بطريقة مبتكرة عبر بطاقات الكلمات والألعاب التعليمية! 🎓✨ استمتع بالأنشطة التفاعلية والتحديات التي تساعدك على تثبيت المفردات وفهم الثقافة بشكل ممتع.</string>
    <string name="the_right_word_is">الكلمة الصحيحة هي </string>
    <string name="the_right_arreng_is">الترتيب الصحيحة هو </string>
    <string name="welcome_to_home_fragment">أهلاً بك في الصفحة الرئيسية</string>
    <string name="home_fragment_disc">هنا تبداء رحلتنا الى استكشاف الكلمات والمعاني الجديدة في مختلف البلدان العربية والبداية ستكون من المملكة العربية السعودية</string>
    <string name="click_here">اضغط هنا</string>
    <string name="beginning_journey_in_saudi_arabia">المدخل الى بداية الرحلة في المملكة العربية السعودية</string>


</resources>