<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    tools:context=".Profile">

    <ImageView
        android:id="@+id/ProfilebackImage"
        android:layout_width="42dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ImageView
        android:id="@+id/profileImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/vector__1_"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/profileNametxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="مرحبا بك احمد"
        android:textSize="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/profileImg"
        app:layout_constraintStart_toStartOf="@id/profileImg"
        app:layout_constraintEnd_toEndOf="@id/profileImg"

        />
    <View
        android:id="@+id/profileView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileNametxt" />



    <LinearLayout
        android:id="@+id/levelProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@id/profileNametxt"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/app"
            android:text="@string/level"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/level"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/friendsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/levelProfile"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/app"
            android:text="@string/friends"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/friends"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/friendsLayout"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/app"
            android:text="@string/editeProfile"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/editImg"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/edit"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/editLayout"
        >

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/app"
            android:text="@string/logout"
            android:textSize="30dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/logout"
            android:layout_marginStart="10dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>