<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".View.SettingsFragment">

    <ImageView
        android:id="@+id/backImage"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/back"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="135dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/backImage" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:fontFamily="@font/app"
        android:text="@string/settings"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/notification_circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/notification_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:src="@drawable/notification"
        app:layout_constraintBottom_toBottomOf="@+id/notification_circle"
        app:layout_constraintStart_toStartOf="@+id/notification_circle"
        app:layout_constraintEnd_toEndOf="@+id/notification_circle"
        app:layout_constraintTop_toTopOf="@+id/notification_circle" />

    <TextView
        android:id="@+id/notification_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="96dp"
        android:fontFamily="@font/app"
        android:text="@string/notification"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/notification_icon"
        app:layout_constraintTop_toTopOf="@+id/notification_circle" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/notification_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/notification_text"
        />






    <ImageView
        android:id="@+id/night_circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/notification_divider" />

    <ImageView
        android:id="@+id/night_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:src="@drawable/night"
        app:layout_constraintBottom_toBottomOf="@+id/night_circle"
        app:layout_constraintStart_toStartOf="@+id/night_circle"
        app:layout_constraintEnd_toEndOf="@+id/night_circle"
        app:layout_constraintTop_toTopOf="@+id/night_circle" />

    <TextView
        android:id="@+id/night_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/app"
        android:text="@string/night_mode"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/night_icon"
        app:layout_constraintTop_toTopOf="@+id/night_circle" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/night_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/night_text"
        />






    <ImageView
        android:id="@+id/help_center_circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/night_divider" />

    <ImageView
        android:id="@+id/help_center_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:src="@drawable/help_center"
        app:layout_constraintBottom_toBottomOf="@+id/help_center_circle"
        app:layout_constraintStart_toStartOf="@+id/help_center_circle"
        app:layout_constraintEnd_toEndOf="@+id/help_center_circle"
        app:layout_constraintTop_toTopOf="@+id/help_center_circle" />

    <TextView
        android:id="@+id/help_center_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:fontFamily="@font/app"
        android:text="@string/help_center"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/help_center_icon"
        app:layout_constraintTop_toTopOf="@+id/help_center_circle" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/help_center_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@+id/help_center_text"
        />






    <ImageView
        android:id="@+id/contact_us_circle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="52dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/help_center_divider" />

    <ImageView
        android:id="@+id/contact_us_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:src="@drawable/contact_us"
        app:layout_constraintBottom_toBottomOf="@+id/contact_us_circle"
        app:layout_constraintStart_toStartOf="@+id/contact_us_circle"
        app:layout_constraintEnd_toEndOf="@+id/contact_us_circle"
        app:layout_constraintTop_toTopOf="@+id/contact_us_circle" />

    <TextView
        android:id="@+id/contact_us_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="78dp"
        android:fontFamily="@font/app"
        android:text="@string/contact_us"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/contact_us_icon"
        app:layout_constraintTop_toTopOf="@+id/contact_us_circle" />



</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
